--- a/public/style/style.css
+++ b/public/style/style.css
@@ -101,7 +101,7 @@ ul {
 	margin-top: 30px;
 	margin-left: -250px;
 	left: 50%;
-	visibility: hidden;
+	visibility: visible;
 	border-top: 8px solid red;
 	border-radius: 8px;
 }
