--- a/public/style/style.css
+++ b/public/style/style.css
@@ -37,12 +37,23 @@ ul {
 }
 
 .btn-add,
-.btn-save {
+.btn-save,
+.btn-delete {
 	background-color: #56c4ef;
 }
 
-.btn-add:hover {
+.btn-add:hover,
+.btn-save:hover,
+.btn-delete:hover {
 	background-color: #74a6f2;
+}
+
+.btn-cancel {
+	background-color: #9ca4af;
+}
+
+.btn-cancel:hover {
+	background-color: #848b96;
 }
 
 /* Header Section */
@@ -165,6 +176,48 @@ ul {
 .modal-footer .btn-save {
 	margin-left: 300px;
 }
+
+#delete-modal {
+	position: absolute;	
+	width: 300px;
+	height: 200px;
+	background-color: #fff;
+	z-index: 9999;
+	margin-top: 30px;
+	margin-left: -150px;
+	left: 50%;
+	border-radius: 8px;
+	color: #434a56;
+}
+
+#delete-modal h3 {
+	padding: 20px 20px;
+	font-weight: 400;
+}
+
+#delete-modal p {
+	font-size: 70%;
+	padding-left: 20px;
+}
+
+#delete-modal-footer {
+	height: 60px;
+	margin-top: 60px;
+	background-color: #f9f9f9;
+	border-radius: 0px 0px 8px 8px;
+}
+
+#delete-modal-footer .btn {
+	margin-top: 10px;
+}
+
+#delete-modal-footer .btn-cancel {
+	margin-left: 20px;
+	margin-right: 80px; 
+}
+
+
+
 
 
 
