--- a/public/style/style.css
+++ b/public/style/style.css
@@ -56,6 +56,10 @@ ul {
 	background-color: #848b96;
 }
 
+.btn.no-save {
+	background-color: #9ca4af;
+}
+
 /* Header Section */
 .header {
 	height: 80px;
@@ -73,7 +77,7 @@ ul {
 	background-color: #fff;
 	width: 250px;
 	height: 250px;
-	border-top: 6px solid blue;
+	border-top: 6px solid #ffa07a;
 	float: left;
 	margin: 20px;
 	border-radius: 5px;
@@ -118,7 +122,7 @@ ul {
 	margin-top: 30px;
 	margin-left: -250px;
 	left: 50%;
-	border-top: 8px solid red;
+	border-top: 8px solid #ffa07a;
 	border-radius: 8px;
 }
 
